k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zlinebot-service
  namespace: zlinebot
spec:
  selector:
    app: zlinebot
    component: core
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
